# stoka

./: .gitignore  Cargo.toml  readme.md
entity/src/: book.rs  book_info.rs  email.rs  file_type.rs  lib.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20231124_193135_create_book_table.rs  m20231124_193703_create_email_table.rs  m20231124_194004_create_filetype_table.rs  m20231223_230304_book_info_table.rs
src/: api.rs  auth.rs  config.rs  lib.rs  main.rs
src/api/: book.rs  user.rs
