[package]
name = "stoka"
version = "0.1.0"
authors = ["NotMarek <me@notmarek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
# actix - web framework
actix-web = {version = "4.4", features = ["rustls"]}
actix-cors = "0.6"
actix-http = "3.4"
actix-files = "0.6"
actix-service = "2.0"
actix-multipart = "0.6"
actix-web-httpauth = "0.8"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }

sha2 = "0.10.8"

# reqwest - http client
reqwest = { version = "0.11", features = ["json", "stream"] }

# serde - json serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# log - logging
pretty_env_logger = "0.5"
log = "0.4"

# jwt - authorization
jsonwebtoken = "9"

# chrono - date and time
chrono = "0.4"

# sea-orm - database
sea-orm = { version = "0.12", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }


# argon2 - password hashing
rust-argon2 = "2.0"

# sysinfo - system info
sysinfo = "0.29"

# futures - async
futures = "0.3"

# thiserror - error handling
thiserror = "1.0"

# async-trait - async trait 
async-trait = "0.1"

entity = { path = "entity" }
migration = { path = "migration" }

async-recursion = "1"
hex = "0.4.3"
